# ndvi-compare

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bootstrap.sh  maps_response.json  pyproject.toml  requirements.txt
cache_data/: cache.db
src/geochange_detection_api/: main.py
src/geochange_detection_api/api/: endpoints.py
src/geochange_detection_api/models/: request.py
src/geochange_detection_api/services/: download.py
src/geochange_detection_api/util/: config.py
src/ndvi_compare/: main.py
src/ndvi_compare/api/: endpoints.py
src/ndvi_compare/models/: request.py
src/ndvi_compare/services/: download.py
src/satellite_change_service/: main.py
src/satellite_change_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
