[project]
name = "satellite-change-service"
description = "FastAPI backend for satellite change detection"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "matplotlib",
    "pydantic",
    "contextily",
    "geopandas",
    "shapely",
    "anyio",
    "rasterio",
    "numpy",
    "earthengine-api",
    "datetime",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[project.scripts]
app = "satellite_change_service.main:main"

[tool.scripts]
uv = "uvicorn"

[dependency-groups]
dev = [
   
]