[project]
name = "geochange_detection_api"
description = "FastAPI backend for GeoChange detection"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "matplotlib",
    "pydantic",
    "contextily",
    "geopandas",
    "shapely",
    "anyio",
    "rasterio",
    "numpy",
    "earthengine-api",
    "datetime",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[project.scripts]
app = "geochange_detection_api.main:main"

[tool.scripts]
uv = "uvicorn"

[dependency-groups]
dev = [
   
]