[project]
name = "ndvi_compare"
description = "FastAPI backend for NDVI comparison"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "matplotlib",
    "pydantic",
    "contextily",
    "geopandas",
    "shapely",
    "anyio",
    "rasterio",
    "numpy",
    "earthengine-api",
    "datetime",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[project.scripts]
app = "ndvi_compare.main:main"

[tool.scripts]
uv = "uvicorn"

[dependency-groups]
dev = [
   
]